planned changes:
 * score method [drafting has begun]

v0.4.29
 * controls() function for setting drillingControls
 * mail concordances
 * rework of kwic as a S4 method for partition and context class
 * speeches method
 * tf for partitionCluster improved

v0.4.28
 * reorganization of the code in files so that shift to S4 methods is reflected
 * documentation for trim method
 * documentation for enrich method
 * addPos method integrated into enrich method [to be checked]
 * addPos is kept as a method, but not exported into namespace
 * set up of missing metadata for dispersion
 * warning if labels are missing in tf method for partitionCluster
 * Encoding of partition labels adjusted to encoding of console
 * adjust encoding for input to partitionCluster
 * speeches method is drafted at end of partition.R [final development, debugging]
 * context method: no explicit statement of posFilter required [to be checked]
 * methods for adjusting crosstab objects fused into trim,crosstab-method [BUG, needs to be checked]


v0.4.27
 * context and contextCluster functions turned into methods

v0.4.26
 * extended export functionality: mail statistics
 * parameters for partition and partitionCluster call simplified (tf, meta)
 * sAttributes method for character vectors to get sAttributes of corpus

v0.4.25
 * html method to inspect partitions

v0.4.24
 * tf method for partition and partitionCluster
 * summary for partitionCluster
 * selective setup of metadata for speeding up things

v0.4.23
 * stopwords option introduced in context function for filtering and brute disambiguation
 * cqpQuery class thrown out again - it does not improve usability
 * partitionCluster and contextCluster are now S4 classes, with some more methods
 * adjust function is now trim method for contextCluster objects

v0.4.22
 * zoom function added to specify partitions
 * partitionCluster faster as it relies on zoom function
 * context function will work on character vectors and cqpQuery object