@@ -17,7 +17,6 @@ export(shinyDispersion)
 export(shinyKeyness)
 export(shinyVolatility)
 export(zoom)
-exportClasses(concordances)
 exportClasses(crosstab)
 exportClasses(keyness)
 exportClasses(kwic)
@@ -35,6 +34,7 @@ exportMethods(context)
 exportMethods(enrich)
 exportMethods(html)
 exportMethods(keyness)
+exportMethods(kwic)
 exportMethods(mail)
 exportMethods(merge)
 exportMethods(meta)
